# playground-rust

./: .gitignore  README.md
books/the-rust-programming-language/chapter-1/1-2/: .gitignore
books/the-rust-programming-language/chapter-10/generics/: Cargo.toml
books/the-rust-programming-language/chapter-10/lifetime/: Cargo.toml
books/the-rust-programming-language/chapter-10/traits/: Cargo.toml
books/the-rust-programming-language/chapter-11/rect-tests/: Cargo.toml
books/the-rust-programming-language/chapter-13/closures/: Cargo.toml
books/the-rust-programming-language/chapter-13/iterators/: Cargo.toml
books/the-rust-programming-language/chapter-13/minigrep/: Cargo.toml
books/the-rust-programming-language/chapter-2/guessing_game/: Cargo.toml
books/the-rust-programming-language/chapter-4/slices/: Cargo.toml
chapter-1/1-3/hello_cargo/: Cargo.toml
chapter-3/loops/: Cargo.toml
chapter-3/loops/src/: main.rs
chapter-4/borrowing/: Cargo.toml
chapter-4/ownership/: Cargo.toml
chapter-4/slices/: Cargo.toml
chapter-4/slices/src/: main.rs
examples/amazon-kvs-get-media-consumer/: Cargo.toml
examples/amazon-kvs-get-media-consumer/scripts/: Makefile  generate-credentials-file.py  run-webcam-test.sh
examples/amazon-kvs-get-media-consumer/src/: main.rs
examples/aws-sdk/: Cargo.toml
examples/aws-sdk/src/: main.rs
tokio/echo-protocol-tcp/src/: main.rs
tokio/echo-protocol-udp/: Cargo.toml
tokio/echo-protocol-udp/src/: main.rs
tokio/my-redis/: Cargo.toml
tokio/my-redis/src/: main.rs
(+17 files in other folders)
